Align compiler fork options with java fork options